--- a/catype.cabal
+++ b/catype.cabal
@@ -24,5 +24,6 @@ executable catype
                      , mtl >=2.1 && <2.2
                      , lens
                      , containers
+                     , parsec
   hs-source-dirs:      src
   default-language:    Haskell2010
