--- a/catype.cabal
+++ b/catype.cabal
@@ -27,3 +27,16 @@ executable catype
                      , parsec
   hs-source-dirs:      src
   default-language:    Haskell2010
+
+test-suite catype_test
+  hs-source-dirs: Test, src
+  main-is:        TestMain.hs
+  type:           exitcode-stdio-1.0
+  build-depends:  base >=4.7 && <4.8
+                , mtl >=2.1 && <2.2
+                , lens
+                , containers
+                , parsec
+  ghc-options:    -Wall
+  build-depends:  test-framework, test-framework-hunit, test-framework-quickcheck2,
+                  HUnit, QuickCheck
